usage table: fix scrolling on iphone

--- a/site/src/site.less
+++ b/site/src/site.less
@@ -670,6 +670,7 @@ a.Button--demo-link {
 // Usage table
 
 .usage-table {
+	min-height: 1px;
 	td, th {
 		line-height: 1.4;
 		vertical-align: top;
